/*
 * SPDX-FileCopyrightText: Copyright (c) 2026 NVIDIA CORPORATION & AFFILIATES. All rights reserved.
 * SPDX-License-Identifier: Apache-2.0
 *
 * Licensed under the Apache License, Version 2.0 (the "License");
 * you may not use this file except in compliance with the License.
 * You may obtain a copy of the License at
 *
 * http://www.apache.org/licenses/LICENSE-2.0
 *
 * Unless required by applicable law or agreed to in writing, software
 * distributed under the License is distributed on an "AS IS" BASIS,
 * WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
 * See the License for the specific language governing permissions and
 * limitations under the License.
 */

package store

import (
	"context"
	"database/sql"
	"encoding/json"
	"fmt"

	"github.com/google/uuid"
	"github.com/uptrace/bun"

	"github.com/nvidia/bare-metal-manager-rest/rla/internal/converter/dao"
	"github.com/nvidia/bare-metal-manager-rest/rla/internal/db/model"
	"github.com/nvidia/bare-metal-manager-rest/rla/internal/db/postgres"
	dbquery "github.com/nvidia/bare-metal-manager-rest/rla/internal/db/query"
	taskcommon "github.com/nvidia/bare-metal-manager-rest/rla/internal/task/common"
	"github.com/nvidia/bare-metal-manager-rest/rla/internal/task/operationrules"
	taskdef "github.com/nvidia/bare-metal-manager-rest/rla/internal/task/task"
	"github.com/nvidia/bare-metal-manager-rest/rla/pkg/common/errors"
)

// PostgresStore implements the Store interface using PostgreSQL.
type PostgresStore struct {
	pg *postgres.Postgres
}

// NewPostgres creates a new PostgreSQL-backed task store.
func NewPostgres(pg *postgres.Postgres) *PostgresStore {
	return &PostgresStore{pg: pg}
}

// CreateTask creates a new task record.
func (s *PostgresStore) CreateTask(
	ctx context.Context,
	task *taskdef.Task,
) error {
	if err := dao.TaskTo(task).Create(ctx, s.pg.DB()); err != nil {
		return errors.GRPCErrorInternal(err.Error())
	}

	return nil
}

// GetTasks retrieves tasks by their IDs.
func (s *PostgresStore) GetTasks(
	ctx context.Context,
	ids []uuid.UUID,
) ([]*taskdef.Task, error) {
	results := make([]*taskdef.Task, 0, len(ids))
	for _, id := range ids {
		if id == uuid.Nil {
			results = append(results, nil)
			continue
		}

		taskDao, err := model.GetTask(ctx, s.pg.DB(), id)
		if err != nil {
			return nil, errors.GRPCErrorInternal(err.Error())
		}

		results = append(results, dao.TaskFrom(taskDao))
	}

	return results, nil
}

// ListTasks lists tasks matching the given criteria.
func (s *PostgresStore) ListTasks(
	ctx context.Context,
	options *taskcommon.TaskListOptions,
	pagination *dbquery.Pagination,
) ([]*taskdef.Task, int32, error) {
	taskDaos, total, err := model.ListTasks(ctx, s.pg.DB(), options, pagination)
	if err != nil {
		return nil, 0, errors.GRPCErrorInternal(err.Error())
	}

	results := make([]*taskdef.Task, 0, len(taskDaos))
	for _, taskDao := range taskDaos {
		results = append(results, dao.TaskFrom(&taskDao))
	}

	return results, total, nil
}

// UpdateScheduledTask updates task scheduling information.
func (s *PostgresStore) UpdateScheduledTask(
	ctx context.Context,
	task *taskdef.Task,
) error {
	taskDao := dao.TaskTo(task)
	if err := taskDao.UpdateScheduledTask(ctx, s.pg.DB()); err != nil {
		return errors.GRPCErrorInternal(err.Error())
	}

	return nil
}

// UpdateTaskStatus updates the status and message of a task.
func (s *PostgresStore) UpdateTaskStatus(
	ctx context.Context,
	arg *taskdef.TaskStatusUpdate,
) error {
	taskDao := &model.Task{
		ID: arg.ID,
	}

	err := taskDao.UpdateTaskStatus(ctx, s.pg.DB(), arg.Status, arg.Message)
	if err != nil {
		return errors.GRPCErrorInternal(err.Error())
	}

	return nil
}

// ========================================
// Operation Rule Methods
// ========================================

// CreateRule creates a new operation rule
func (s *PostgresStore) CreateRule(
	ctx context.Context,
	rule *operationrules.OperationRule,
) error {
	dbModel, err := dao.OperationRuleTo(rule)
	if err != nil {
		return errors.GRPCErrorInvalidArgument(err.Error())
	}

	if err := dbModel.Create(ctx, s.pg.DB()); err != nil {
		if s.pg.ErrorChecker().IsUniqueConstraintError(err) {
			return errors.GRPCErrorAlreadyExists(
				"a default rule already exists for this operation type",
			)
		}
		return errors.GRPCErrorInternal(err.Error())
	}

	rule.CreatedAt = dbModel.CreatedAt
	rule.UpdatedAt = dbModel.UpdatedAt

	return nil
}

// UpdateRule updates specific fields of an operation rule
func (s *PostgresStore) UpdateRule(
	ctx context.Context,
	id uuid.UUID,
	updates map[string]interface{},
) error {
	if len(updates) == 0 {
		return nil
	}

	dbModel, err := model.GetOperationRule(ctx, s.pg.DB(), id)
	if err != nil {
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return errors.GRPCErrorNotFound("operation rule not found")
		}
		return errors.GRPCErrorInternal(err.Error())
	}

	columns := make([]string, 0, len(updates))
	for key, value := range updates {
		switch key {
		case "name":
			if v, ok := value.(string); ok {
				dbModel.Name = v
				columns = append(columns, "name")
			}
		case "description":
			if v, ok := value.(string); ok {
				dbModel.Description = sql.NullString{String: v, Valid: true}
				columns = append(columns, "description")
			}
		case "rule_definition":
			if ruleDef, ok := value.(operationrules.RuleDefinition); ok {
				ruleDefJSON, err := operationrules.MarshalRuleDefinition(ruleDef)
				if err != nil {
					return errors.GRPCErrorInvalidArgument(fmt.Sprintf("invalid rule definition: %v", err))
				}
				dbModel.RuleDefinition = json.RawMessage(ruleDefJSON)
				columns = append(columns, "rule_definition")
			}
		case "is_default":
			if v, ok := value.(bool); ok {
				dbModel.IsDefault = v
				columns = append(columns, "is_default")
			}
		}
	}

	if len(columns) == 0 {
		return nil
	}

	if err := dbModel.Update(ctx, s.pg.DB(), columns...); err != nil {
		return errors.GRPCErrorInternal(fmt.Sprintf("failed to update operation rule: %v", err))
	}

	return nil
}

// DeleteRule deletes an operation rule by ID
func (s *PostgresStore) DeleteRule(
	ctx context.Context,
	id uuid.UUID,
) error {
	dbModel := &model.OperationRule{ID: id}
	if err := dbModel.Delete(ctx, s.pg.DB()); err != nil {
		return errors.GRPCErrorInternal(
			fmt.Sprintf("failed to delete operation rule: %v", err),
		)
	}
	return nil
}

// SetRuleAsDefault sets a rule as the default for its operation.
// Automatically unsets any existing default for the same (operation_type, operation_code).
func (s *PostgresStore) SetRuleAsDefault(
	ctx context.Context,
	id uuid.UUID,
) error {
	return s.pg.RunInTx(ctx, func(ctx context.Context, tx bun.Tx) error {
		// Get the rule to find its operation_type and operation_code
		rule, err := model.GetOperationRule(ctx, tx, id)
		if err != nil {
			return errors.GRPCErrorNotFound(
				fmt.Sprintf("operation rule not found: %v", err),
			)
		}
		if rule == nil {
			return errors.GRPCErrorNotFound(
				fmt.Sprintf("operation rule not found: %v", id),
			)
		}

		// Unset all defaults for this (operation_type, operation_code)
		_, err = tx.NewUpdate().
			TableExpr("operation_rules").
			Set("is_default = ?", false).
			Where("operation_type = ?", rule.OperationType).
			Where("operation_code = ?", rule.OperationCode).
			Where("is_default = ?", true).
			Exec(ctx)
		if err != nil {
			return errors.GRPCErrorInternal(
				fmt.Sprintf("failed to unset existing defaults: %v", err),
			)
		}

		// Set this rule as default
		_, err = tx.NewUpdate().
			TableExpr("operation_rules").
			Set("is_default = ?", true).
			Where("id = ?", id).
			Exec(ctx)
		if err != nil {
			return errors.GRPCErrorInternal(
				fmt.Sprintf("failed to set rule as default: %v", err),
			)
		}

		return nil
	})
}

// GetRule retrieves an operation rule by ID
func (s *PostgresStore) GetRule(
	ctx context.Context,
	id uuid.UUID,
) (*operationrules.OperationRule, error) {
	dbModel, err := model.GetOperationRule(ctx, s.pg.DB(), id)
	if err != nil {
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return nil, errors.GRPCErrorNotFound("operation rule not found")
		}
		return nil, errors.GRPCErrorInternal(fmt.Sprintf("failed to get operation rule: %v", err))
	}

	return dao.OperationRuleFrom(dbModel)
}

// GetRuleByOperationAndRack retrieves the appropriate rule for an operation code and rack.
// Resolution order: rack association > default rule
func (s *PostgresStore) GetRuleByOperationAndRack(
	ctx context.Context,
	opType taskcommon.TaskType,
	operationCode string,
	rackID *uuid.UUID,
) (*operationrules.OperationRule, error) {
	// Check rack association first if rackID is provided
	if rackID != nil && *rackID != uuid.Nil {
		assoc, err := model.GetRackRuleAssociation(ctx, s.pg.DB(), *rackID, opType, operationCode)
		if err != nil && !s.pg.ErrorChecker().IsErrNoRows(err) {
			return nil, errors.GRPCErrorInternal(
				fmt.Sprintf("failed to query rack rule association: %v", err),
			)
		}

		// If association found, get the rule by ID
		if assoc != nil {
			dbModel, err := model.GetOperationRule(ctx, s.pg.DB(), assoc.RuleID)
			if err != nil {
				if s.pg.ErrorChecker().IsErrNoRows(err) {
					return nil, errors.GRPCErrorNotFound(
						fmt.Sprintf("associated rule %s not found", assoc.RuleID),
					)
				}
				return nil, errors.GRPCErrorInternal(
					fmt.Sprintf("failed to get associated rule: %v", err),
				)
			}
			return dao.OperationRuleFrom(dbModel)
		}
	}

	// Fall back to default rule
	return s.GetDefaultRule(ctx, opType, operationCode)
}

// ListRules lists operation rules matching the given criteria with pagination
func (s *PostgresStore) ListRules(
	ctx context.Context,
	options *taskcommon.OperationRuleListOptions,
	pagination *dbquery.Pagination,
) ([]*operationrules.OperationRule, int32, error) {
	dbModels, total, err := model.ListOperationRules(ctx, s.pg.DB(), options, pagination)
	if err != nil {
		return nil, 0, errors.GRPCErrorInternal(
			fmt.Sprintf("failed to list operation rules: %v", err),
		)
	}

	rules := make([]*operationrules.OperationRule, 0, len(dbModels))
	for i := range dbModels {
		rule, err := dao.OperationRuleFrom(&dbModels[i])
		if err != nil {
			return nil, 0, err
		}
		rules = append(rules, rule)
	}

	return rules, total, nil
}

// GetRuleByName retrieves an operation rule by its name
func (s *PostgresStore) GetRuleByName(
	ctx context.Context,
	name string,
) (*operationrules.OperationRule, error) {
	var dbModel model.OperationRule
	err := s.pg.DB().NewSelect().
		Model(&dbModel).
		Where("name = ?", name).
		Limit(1).
		Scan(ctx)

	if err != nil {
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return nil, errors.GRPCErrorNotFound(fmt.Sprintf("rule with name '%s' not found", name))
		}
		return nil, errors.GRPCErrorInternal(fmt.Sprintf("failed to get rule by name: %v", err))
	}

	return dao.OperationRuleFrom(&dbModel)
}

// GetDefaultRule retrieves the default rule for an operation type and code
func (s *PostgresStore) GetDefaultRule(
	ctx context.Context,
	opType taskcommon.TaskType,
	operationCode string,
) (*operationrules.OperationRule, error) {
	var dbModel model.OperationRule
	err := s.pg.DB().NewSelect().
		Model(&dbModel).
		Where("operation_type = ?", string(opType)).
		Where("operation_code = ?", operationCode).
		Where("is_default = ?", true).
		Limit(1).
		Scan(ctx)

	if err != nil {
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return nil, nil // No default rule exists
		}
		return nil, errors.GRPCErrorInternal(
			fmt.Sprintf("failed to get default rule: %v", err),
		)
	}

	return dao.OperationRuleFrom(&dbModel)
}

// ========================================
// Rack Rule Association Methods
// ========================================

// AssociateRuleWithRack associates a rule with a rack.
// The operation type and operation code are extracted from the rule.
func (s *PostgresStore) AssociateRuleWithRack(
	ctx context.Context,
	rackID uuid.UUID,
	ruleID uuid.UUID,
) error {
	// Get the rule to extract operation_type and operation_code (also verifies it exists)
	dbModel, err := model.GetOperationRule(ctx, s.pg.DB(), ruleID)
	if err != nil {
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return errors.GRPCErrorNotFound(fmt.Sprintf("rule %s not found", ruleID))
		}
		return errors.GRPCErrorInternal(fmt.Sprintf("failed to get rule: %v", err))
	}

	operationCode := dbModel.OperationCode
	opType := taskcommon.TaskTypeFromString(dbModel.OperationType)

	// Check if association already exists
	existing, err := model.GetRackRuleAssociation(ctx, s.pg.DB(), rackID, opType, operationCode)
	if err != nil && !s.pg.ErrorChecker().IsErrNoRows(err) {
		return errors.GRPCErrorInternal(fmt.Sprintf("failed to check existing association: %v", err))
	}

	if existing != nil {
		// Update existing association
		_, err := s.pg.DB().NewUpdate().
			Model((*model.RackRuleAssociation)(nil)).
			Set("rule_id = ?", ruleID).
			Set("updated_at = NOW()").
			Where("rack_id = ?", rackID).
			Where("operation_type = ?", string(opType)).
			Where("operation_code = ?", operationCode).
			Exec(ctx)
		if err != nil {
			return errors.GRPCErrorInternal(fmt.Sprintf("failed to update association: %v", err))
		}
		return nil
	}

	// Create new association
	assoc := &model.RackRuleAssociation{
		RackID:        rackID,
		OperationType: string(opType),
		OperationCode: operationCode,
		RuleID:        ruleID,
	}

	if err := assoc.Create(ctx, s.pg.DB()); err != nil {
		return errors.GRPCErrorInternal(fmt.Sprintf("failed to create association: %v", err))
	}

	return nil
}

// DisassociateRuleFromRack removes the rule association for a rack, operation type, and operation code
func (s *PostgresStore) DisassociateRuleFromRack(
	ctx context.Context,
	rackID uuid.UUID,
	opType taskcommon.TaskType,
	operationCode string,
) error {
	assoc := &model.RackRuleAssociation{
		RackID:        rackID,
		OperationType: string(opType),
		OperationCode: operationCode,
	}

	if err := assoc.Delete(ctx, s.pg.DB()); err != nil {
		// Don't treat "not found" as an error
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return nil
		}
		return errors.GRPCErrorInternal(fmt.Sprintf("failed to delete association: %v", err))
	}

	return nil
}

// GetRackRuleAssociation retrieves the rule ID associated with a rack for an operation type and operation code
func (s *PostgresStore) GetRackRuleAssociation(
	ctx context.Context,
	rackID uuid.UUID,
	opType taskcommon.TaskType,
	operationCode string,
) (*uuid.UUID, error) {
	assoc, err := model.GetRackRuleAssociation(ctx, s.pg.DB(), rackID, opType, operationCode)
	if err != nil {
		if s.pg.ErrorChecker().IsErrNoRows(err) {
			return nil, nil // No association exists
		}
		return nil, errors.GRPCErrorInternal(fmt.Sprintf("failed to get association: %v", err))
	}

	if assoc == nil {
		return nil, nil
	}

	return &assoc.RuleID, nil
}

// ListRackRuleAssociations retrieves all rule associations for a rack
func (s *PostgresStore) ListRackRuleAssociations(
	ctx context.Context,
	rackID uuid.UUID,
) ([]*operationrules.RackRuleAssociation, error) {
	assocs, err := model.ListRackRuleAssociations(ctx, s.pg.DB(), rackID)
	if err != nil {
		return nil, errors.GRPCErrorInternal(
			fmt.Sprintf("failed to list rack associations: %v", err),
		)
	}

	result := make([]*operationrules.RackRuleAssociation, 0, len(assocs))
	for i := range assocs {
		result = append(result, dao.RackRuleAssociationFrom(&assocs[i]))
	}

	return result, nil
}
